# geopoint

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: publish.yaml  test.yaml
benches/: geopoint_benchmarks.rs
src/: lib.rs
tests/: conformal_test.rs  lib_test.rs  zero_vector_test.rs
